resolved some home page spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -221,18 +221,30 @@ h3 {
   margin-right: 5%;
   float: right;
   display: grid;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-rows: repeat(9, 150px);
   grid-template-columns: repeat(5, 1fr);
-  border-right: 1.5px dashed black;
+  border-right: 0.5px dashed #5900FF;
 }
 .mainContent .introText {
   grid-row-start: 1;
   grid-row-end: 2;
   grid-column-start: 1;
   grid-column-end: 6;
-  text-align: center;
+  border: 0.5px dashed gray;
 }
-.mainContent .introText span {
+.mainContent .introText h1 {
+  padding-top: 60px;
+}
+.mainContent .introText .introTextContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.mainContent .introText p {
   font-family: 'Montserrat';
   font-weight: normal;
   font-style: normal;
@@ -240,6 +252,7 @@ h3 {
   color: #957fef;
 }
 .mainContent .introPara1 {
+  border: 0.5px dashed gray;
   grid-row-start: 2;
   grid-row-end: 5;
   grid-column-start: 1;
@@ -250,23 +263,25 @@ h3 {
   padding-left: 16px;
 }
 .mainContent .introImg {
-  grid-row-start: 2;
+  grid-row-start: 3;
   grid-row-end: 5;
   grid-column-start: 2;
   grid-column-end: 5;
+  border: 0.5px dashed gray;
 }
 .mainContent .introImg img {
-  padding: 10% 1% 0 1%;
-  max-width: 80%;
+  max-width: 90%;
   max-height: 100%;
   opacity: 0.4;
 }
 .mainContent .introImg .imgContainer {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-end;
 }
 .mainContent .introPara2 {
   grid-row-start: 2;
@@ -280,12 +295,13 @@ h3 {
 }
 .mainContent .centerImg {
   grid-row-start: 5;
-  grid-row-end: 8;
+  grid-row-end: 7;
   grid-column-start: 1;
   grid-column-end: 4;
+  border: 0.5px dashed gray;
 }
 .mainContent .centerImg img {
-  padding: 20px 15px 0 15px;
+  padding: 20px 20px 0 15%;
   width: 100%;
   max-height: 100%;
   opacity: 0.5;
@@ -304,10 +320,11 @@ h3 {
   color: #5900ff;
 }
 .mainContent .contactDets {
-  grid-row-start: 8;
-  grid-row-end: 10;
+  grid-row-start: 7;
+  grid-row-end: 9;
   grid-column-start: 1;
   grid-column-end: 3;
+  position: relative;
   padding-left: 15px;
   border-top: 0.5px dashed gray;
   border-right: 0.5px dashed gray;
@@ -319,20 +336,34 @@ h3 {
   font-size: 1.6rem;
   padding: 0 16px;
 }
+.mainContent .phoneImg {
+  grid-row-start: 7;
+  grid-row-end: 8;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.mainContent .phoneImg img {
+  opacity: 0.2;
+  width: 70%;
+}
 .footer {
-  grid-row-start: 10;
-  grid-row-end: 11;
+  grid-row-start: 9;
+  grid-row-end: 10;
   grid-column-start: 1;
   grid-column-end: 6;
 }
+.footer h3 {
+  padding-top: 60px;
+}
 .footer p {
-  padding-top: 45px;
   font-size: 1.2rem;
 }
 .footer .footerContentBox {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
