--- a/less/footer.less
+++ b/less/footer.less
@@ -1,10 +1,14 @@
 .footer {
-    .gridAlign(10, 11, 1, 6);
+    .gridAlign(9, 10, 1, 6);
+    h3 {
+        padding-top: 60px;
+    }
     p {
-        padding-top: 45px;
         font-size: 1.2rem;   
     }
     .footerContentBox {
-        .displayF(column, wrap, center, center)
+        width: 100%;
+        height: 100%;
+        .displayF(column, wrap, space-between, center)
     }
 }
