--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,13 +2,21 @@
     width: calc(90% - 150px);
     margin-right: 5%;
     float: right;
-    .gridStart(repeat(10, 1fr), repeat(5, 1fr));
-    border-right: 1.5px dashed black;
+    .gridStart(repeat(9, 150px), repeat(5, 1fr));
+    border-right: .5px dashed #5900FF;
     
     .introText {
         .gridAlign(1, 2, 1, 6);
-        text-align: center;
-        span {
+        border: .5px dashed gray;
+        h1 {
+            padding-top: 60px;
+        }
+        .introTextContainer {
+            width: 100%;
+            height: 100%;
+            .displayF(column, wrap, space-between, center);
+        }
+        p {
             font-family: 'Montserrat';
             font-weight: normal;
             font-style: normal;
@@ -18,6 +26,7 @@
     }
 
     .introPara1 {
+        border: .5px dashed gray;
         p {
             font-size: 1.6rem;
             padding-left: 16px;
@@ -26,16 +35,19 @@
     }
 
     .introImg {
-        .gridAlign(2, 5, 2, 5);
+        .gridAlign(3, 5, 2, 5);
+        border: .5px dashed gray;
 
         img {
-            padding: 10% 1% 0 1%;
-            max-width: 80%;
+            // padding: 10% 1% 0 1%;
+            max-width: 90%;
             max-height: 100%;
             opacity: .4;
         }
         .imgContainer {
-            .displayF(row, wrap, center, flex-start);
+            width: 100%;
+            height: 100%;
+            .displayF(row, wrap, center, flex-end);
         }
     }
 
@@ -49,9 +61,10 @@
     }
 
     .centerImg {
-        .gridAlign(5, 8, 1, 4);
+        .gridAlign(5, 7, 1, 4);
+        border: .5px dashed gray;
         img {
-            padding: 20px 15px 0 15px;
+            padding: 20px 20px 0 15%;
             width: 100%;
             max-height: 100%;
             opacity: .5;
@@ -70,7 +83,8 @@
     }
 
     .contactDets {
-        .gridAlign(8, 10, 1, 3);
+        .gridAlign(7, 9, 1, 3);
+        position: relative;
         padding-left: 15px;
         border-top: .5px dashed gray;
         border-right: .5px dashed gray;
@@ -80,6 +94,14 @@
         p {
             font-size: 1.6rem;
             padding: 0 16px;
+        }
+    }
+
+    .phoneImg {
+        .gridAlign(7, 8, 1, 3);
+        img {            
+            opacity: .2;
+            width: 70%;
         }
     }
 }
